# CursoPythonBackendEbac

./: Decorators.py  Exercício Calculadora.py  Funções Anônimas (Lambdas).py  Gerenciamento de exceções com Try Except.py  List Comprehension.py  POO1.py  POO2.PY  POO3.py  Polimorfismo.py  Yield.py  aula1.py  aula2.py  calculadora.py  dicionarios.py  exercicio_modulo5.py  funções.py  ge.py  git.py  heranca.py  if_elif_else.py  lab2.py  laços_de_repeticao(for).py  laços_de_repeticao(while).py  listas.py  main.py  operadores_relacionais.py  pyproject.toml  rp1.py  rp10.py  rp11.py  rp12.py  rp13.py  rp14.py  rp15.py  rp16.py  rp17.py  rp18.py  rp19.py  rp2.py  rp20.py  (+13 more)
API's/: API.docx  REST.docx
BACKENDLIVROSEBACPYTHON/: main.py  pyproject.toml
